@@ -2,17 +2,17 @@
 Hash: SHA1
 
 AUX 50notmuch-gentoo.el 291 RMD160 7e036b8700f50cde6c3b27622193ddf08812229b SHA1 cc087fe76f750e84171a6ddef9dc10139b8450cc SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b
-EBUILD notmuch-9999.ebuild 2681 RMD160 1ac3cb8df43c8e00a86119f701d3d79f64b933b2 SHA1 8030b1a123fdd5212de2b2741f7ee65cf2c4476d SHA256 de72e1ae46f93ce24f2ae723aef0c5a55e282e0988131eb6377bee38cce186f3
-MISC ChangeLog 1025 RMD160 d30a10d0e6a254d831158aadfbe4feb39e0e0b4e SHA1 21ab39e3cfc6ca772f5f7b6f526857a2d53d6b11 SHA256 ac1700391274e2097550525cbbee9d763d61a668d463575e64366cdae25f2673
+EBUILD notmuch-9999.ebuild 2691 RMD160 7e190abdcc8004348f4d9240dfab391d26588f90 SHA1 868c450347f829b2cc1a1e2ff500d697a972946c SHA256 a19901a35eddd49fb7d2e5ae35b2d600d196b6fbf7fe8326dfd9ee20e117fd29
+MISC ChangeLog 1183 RMD160 4fd1768e905bf3a021f5e4be322e14f009e90ef0 SHA1 fdf0ae58f3f9c8dd4c008dd3dd5ec745a567e811 SHA256 248c673decfeed57acb62728ca04e0ed6084ceed02aac4ab331c0a3b27173724
 MISC metadata.xml 1003 RMD160 12fa19220fd58eade62c7aafc6a3c2bf5adb6ca5 SHA1 8be789b19b3140dc24694d5c535a7d8a4e8c4b0a SHA256 48f0e1b14cf9bd31f53f6bb481570ec1f067308e067913edbcea50a986b875bc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPUIzQAAoJEPATRTHh2/q1UnAH/3+EEUcmudgd928NhWnX+iIb
-JTk0y27V4Q0vp4J3Ro/KDFgQV5/9lNXhCWbrTwq8IfeKe9l3rc5MLl8kDPEqgmZa
-xO7YoQooWcGZ1L8RRDWCmZGvsVsym2G3vobFYAnl9felLPUXQeM/1ecKH9VvCrv9
-/WrjRZl23/RChs/hD6UmcqnFpcAKHQ57XHMY6hNr23YWXSO+9BZX4weOAm67I7bi
-A8RqAFCH/I+AtrwjB7y+L0bwbG4S5ApvEO4w4SjFXOwyOkIOHPlSdmpqSx4ViazF
-hGhUcPNtGn2keJ0S4Lo3n86+5rJ/ua06nDhqRUwoMVznp9iScbpMqv0WB1K3b9M=
-=UDBe
+iQEcBAEBAgAGBQJPaFemAAoJEPATRTHh2/q1x6MH+wbRJ31voNrCgMZFp1Vl5Tdb
+BnKYItX0VrrwufVC6IzbgOe/fCYlxQxUp/7Iv5atU49eSgSwnrPvZwOb56n4fmsN
+Rb81T0/ZnEcldp/kEBCzoE5essz2I3D2sP59bHK/1vttxzo6P7ejFd/1WMlBKGuC
+/cEW+pptxqfNc7NlsG+1v8x86RHhgO1oPyhiZ2IczPtaDHogs9uzXXInmvZVX3Cr
+J0le6NFYXN1BnwSY39qS6deX8XCVXifisgaYocjcbIF8EyWBzydLU291ciQM8Iaq
+Bk5h1svM5vbFfJ95wYqpGRN2ZuuuSxyZxtryDON4Sc1Qf00aCwSOZ9Q/pOEwVZU=
+=SLQk
 -----END PGP SIGNATURE-----
