@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
+  GMime 2.6 must be at least 2.6.7. Latest HEAD is compatible with Python 3.2.
+
   02 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
   Synced with net-mail/notmuch-0.11.1-r2:gentoo and allowed dev-libs/gmime:2.6
   dependency.
